feat : Added new resume

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="https://github.com/Vasanthkumar-18/Portfolio.git" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
                 <div class="cv-button">
-                    <a href="skillsicons/vasanth-resume (3).pdf" download="" > <button > Download CV</button> </a>
+                    <a href="skillsicons/Resume.pdf" download="" > <button > Download CV</button> </a>
                 </div>
             </div>
         </div>
