feat : Updated contact container

--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
                 <form action="https://api.web3forms.com/submit" method="POST">
 
                     <input type="hidden" name="access_key" value="4831cb31-3012-4d6e-bf3d-0a716455ef66">
-                    <input class="input1 " type="text" name="NAME" placeholder="YOUR NAME " required>
-                    <input class="input2 " input="text" name="EMAIL" placeholder="YOUR EMAIL" required>
-                    <textarea name="message" placeholder="YOUR MESSAGES" rows="8"></textarea>
+                    <input class="input1 " type="text" name="NAME" placeholder=" TYPE YOUR NAME " required>
+                    <input class="input2 " type="email" name="EMAIL" placeholder=" TYPE YOUR EMAIL" required>
+                    <textarea name="message"  placeholder=" TYPE YOUR MESSAGES" rows="8"></textarea>
 
                     <div class="contact-button">
                         <button>
