--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
 
                 <div class="project-button-1">
-                    <a href="https://daily-shop-60034106922.development.catalystserverless.in" target="_blank"> <button
+                    <a href=https://vasanth-02-daily-shop-website.netlify.app/ target="_blank"> <button
                             class="button-view">
                             View
 
