--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
 
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="portfolio.js"></script>
 </body>
 
