feat : Adding animation and insert jquery imge

--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
                     </p>
                 </div>
                 <div class="fi3">
+                    <img src="skillsicons/jquery image1.svg" alt="javascript-svg">
+                    <p>
+                        JQUERY
+                    </p>
+                </div>
+                <div class="fi3">
                     <img src="skillsicons/React.svg" alt="javascript-svg">
                     <p>
                         REACT JS
@@ -172,7 +178,7 @@
                 </div>
                 <div class="back-end">
                     <div class="bi1">
-                        <img src="skillsicons/mongodb.svg" alt="html-svg">
+                        <img src="skillsicons/mongodb image.svg" alt="html-svg">
                         <p>
                             MONGO DB
                         </p>
