Changed some grammar

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 
                 <div class="about-name">
                     <h2>
-                        Hello I'm Vasanthkumar <br> <span>MERN STACK DEVLOPER</span>
+                        Hello I'm Vasanthkumar <br> <span>MERN STACK DEVELOPER</span>
                     </h2>
 
                 </div>
