correction some property

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="hide"><a href="#skills">Skills</a></li>
                 <li class="hide"><a href="#projects">Projects</a></li>
                 <li class="hide"><a href="#contact">Contact</a></li>
-                <div class="menu" >
+                <div class="menu">
 
                     <img id="displayimage" src="skillsicons/menu_38dp_F3F3F3_FILL0_wght400_GRAD0_opsz40.svg" alt="">
                     <!---------close-image--------------- -->
@@ -56,14 +56,14 @@
             </div>
 
             <div class="name-h2">
-                
+
                 <div class="about-name">
                     <h2>
-                        Hello I'm Vasanthkumar <br> <span>MERN STACK DEVELOPER</span>
+                        Hello I'm Vasanthkumar <br> <span>PERN STACK DEVELOPER</span>
                     </h2>
 
                 </div>
-             
+
 
                 <div class="about-icons">
 
@@ -79,7 +79,7 @@
                             class='bx bxl-github'></i></a>
                 </div>
                 <div class="cv-button">
-                    <a href="skillsicons/Resume.pdf" download=""> <button> Download CV</button> </a>
+                    <a href="skillsicons/cv.pdf" download="" target="_blank" > <button> Download CV</button> </a>
                 </div>
             </div>
         </div>
@@ -104,15 +104,15 @@
             <img src="skillsicons/3d-rendering-cartoon-like-man-working-computer.jpg" alt="user-image">
         </div>
         <p>
-            I am Vasanthkumar, a passionate and dedicated full-stack web developer specializing in the MERN stack
-            (MongoDB, Express.js, React, Node.js). After completing a comprehensive training program in full-stack
-            development, I have gained a solid foundation in building dynamic and responsive web applications. My
-            expertise includes designing user-friendly interfaces with React, developing robust RESTful APIs using
-            Express.js, and efficiently managing data storage and retrieval with MongoDB.
-            I am enthusiastic about applying my skills to real-world projects and collaborating with talented teams
-            to drive innovation. I believe that continuous learning is essential in the tech industry, and I
-            actively seek opportunities to expand my knowledge and improve my abilities. My goal is to contribute to
-
+            A fresher full-stack developer with experience in both frontend and backend development, specializing in the
+            PERN stack
+            (PostgreSQL, Express.js, React, and Node.js) for building web applications. Proficient in HTML, CSS,
+            JavaScript, jQuery,
+            and Bootstrap to create responsive and user-friendly interfaces. On the backend, skilled in developing
+            scalable
+            applications using Node.js, Express.js, and PostgreSQL. Strong knowledge of SQL, Git, and GitHub for
+            efficient database
+            management and version control.
         </p>
     </div>
     <br>
@@ -178,9 +178,9 @@
                 </div>
                 <div class="back-end">
                     <div class="bi1">
-                        <img src="skillsicons/mongodb image.svg" alt="html-svg">
+                        <img src="skillsicons/postgresql.svg" alt="html-svg">
                         <p>
-                            MONGO DB
+                            POSTGRSQL
                         </p>
                     </div>
                     <div class="bi2">
@@ -203,12 +203,12 @@
 
 
         <!-- project -->
-        <div class="projects-title" id="projects">
+        <!-- <div class="projects-title" id="projects">
             <h1>
                 Projects
             </h1>
-        </div>
-        <div class="projects">
+        </div> -->
+        <!-- <div class="projects">
 
             <div class="projectcart1">
 
@@ -248,13 +248,13 @@
                 </div>
 
 
-            </div>
+            </div> -->
 
             <!-- lwfw -->
 
 
 
-        </div>
+        <!-- </div> -->
         <!-- ----------------------contact-------------------------------- -->
         <div class="contactheading" id="contact">
             <h1>
