update project cart

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             class='bx bxl-github'></i></a>
                 </div>
                 <div class="cv-button">
-                    <a href="skillsicons/cv.pdf" download="" target="_blank" > <button> Download CV</button> </a>
+                    <a href="skillsicons/cv.pdf" download="" target="_blank"> <button> Download CV</button> </a>
                 </div>
             </div>
         </div>
@@ -203,17 +203,18 @@
 
 
         <!-- project -->
-        <!-- <div class="projects-title" id="projects">
+        <div class="projects-title" id="projects">
             <h1>
                 Projects
             </h1>
-        </div> -->
-        <!-- <div class="projects">
+        </div>
+        <div class="projects">
 
             <div class="projectcart1">
 
                 <div class="project-image1">
-                    <img src="skillsicons/projects image 1.png" alt="">
+
+                    <img src="skillsicons/projectImage1.png" alt="project-image1">
 
                 </div>
                 <div class="project1-heading-1">
@@ -239,7 +240,7 @@
 
                         </button>
                     </a>
-                    <a href="https://github.com/Vasanthkumar-18/Daily-Shop--Website.git" target="_blank"><button
+                    <a href="https://github.com/Vasanthkumar-18/E_Commerce_project" target="_blank"><button
                             class="button-github">
                             Git-hub
                         </button>
@@ -248,13 +249,13 @@
                 </div>
 
 
-            </div> -->
+            </div>
 
             <!-- lwfw -->
 
 
 
-        <!-- </div> -->
+        </div>
         <!-- ----------------------contact-------------------------------- -->
         <div class="contactheading" id="contact">
             <h1>
