update project link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </div>
 
                 <div class="project-button-1">
-                    <a href="https://vasanth-02-daily-shop-website.netlify.app/" target="_blank"> <button
+                    <a href="https://dailyshop1.netlify.app/" target="_blank"> <button
                             class="button-view">
                             View
 
